fitting is solving n equations with p params

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -234,9 +234,12 @@
       "source": [
         "### Linear regression is solving linear equations approximately\n",
         "\n",
-        "Plotting the responses versus predictors reveals a noticeable linear pattern, both in the sample and population datasets. In our case it faintly resembles a line in 2D space that can be described with two numbers: slope and intercept.\n",
+        "Plotting the **responses** versus **predictors** reveals a noticeable linear pattern, both in the sample and population datasets.\n",
+        " In our case it resembles a line in 2D space that can be described with two numbers: slope and intercept. Finding such a line is called line fitting.\n",
         "\n",
-        "Fitting a linear model to data is similar to solving n equations with p variables, with the goal of finding the coefficient.  There is  one small difference: fitting linear model is approximate, while solving system of linear equations is exact solutions.\n",
+        "How can we formulize the line fitting? Fitting a linear model to data is similar to solving n equations with p variables, with the goal of finding the coefficient. It sometimes a bit confusing because of notation. Usually in books unknown is denoted by $x$ and coefficients are known. However, statistics books $x$'s are our data that are known and we are looking to find the coefficient.\n",
+        "\n",
+        "There is  one another differenece between line fitting and solving n equations with p parameters: fitting linear model is approximate, while solving system of linear equations is exact solutions.\n",
         "\n",
         "\n",
         "Going back to history of linear regression, the first use of fitting linear models to observed data originated from the field of astronomy. Scientists attempted to determine fixed parameters related to the positions and motions of celestial bodies based on astronomical data, under the assumption of a linear model.\n",
@@ -244,9 +247,7 @@
         "\n",
         "Their trick was to introduce an error term, ensuring that the equations would always have at least one solution.\n",
         "\n",
-        "Likewise, we can add an error term to the right side of our equations, ensuring that the system always has a solution. However, the caveat is that multiple solutions will exists, each with different error term values and we need to find a criteria that which set of errors are better overall. Or alternatively we can decide  which solution is more likely to be the correct one, if we have a distribution on the error terms.  But hold off on that that part and let's focus on the system of linear equations for now.\n",
-        "\n",
-        "\n",
+        "Likewise, we can add an error term to the right side of our equations, ensuring that the system always has a solution.\n",
         "\n",
         "The equations for a given sample of size n looks likes:\n",
         "$$\n",
@@ -259,7 +260,7 @@
         "$$\n",
         "\n",
         "\n",
-        "At this point the problem statement is more forma. In other word, asking to find the best line that fits the sample data is not as clear as asking to solve a set of linear equations. However, we haven't yet talked about how to solve them.\n",
+        "At this point the problem statement is more formal. In other word, asking to find the best line that fits the sample data is not as clear as asking to solve a set of linear equations. However, we haven't yet talked about how to solve them.\n",
         "\n",
         "Before delving into solving the linear equtions, lets see some algebraic interpretation of this.\n",
         "\n",
