Info to create design matrix from the sample

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -138,14 +138,15 @@
       "cell_type": "markdown",
       "source": [
         "## Introduction\n",
-        "In this notebook, I would like to go through the linear regression concepts. The way I came across the concept in differnt books goes like this.\n",
-        "First some introduction of statistics concepts of how the data looks like, whats a predictor, what is a response, and the goal that is to train from a **sample** data set.\n",
-        " And then there is some matrix notations plus loss functions and instruction on how to use them to reach the goal which is training the model based on given **sample**.\n",
+        "In this notebook, I would like to go through the linear regression concepts. There are several books that has an introduction of this topic.\n",
+        "\n",
+        "Usually the tutorial begins with  statistics concepts like understanding **predictors** and **response**, withe aim to train from a **sample** data set.\n",
+        "It is followed by the introduction of matrix notations and loss function.\n",
         " Ocasionally, at the end, there might be a word or two on how Maximum liklihood or Best Linear Unbiased Estimator  is relevent to the subject.\n",
         "\n",
         "So you see, it starts with statistics, then turns to linear algebra and some analysis, and finally a lot of probability that sounds very uncalled for.\n",
         "\n",
-        "In this notebook, I attempt to teach the linear regression, while separating all this major ideas from different fields of study. I also try to implement python function that serves as a mechanism to talk about all this mathematical abstractions. My hope is to give the audience tools to answer their questions about all this concepts using the python utilities . Hopefully, I can build more tools around them to teach even more complex Machine Learning concepts.\n",
+        "In this notebook, I attempt to teach the linear regression, while separating all this major ideas that pops out of  different fields of study. I also try to implement python function that serves as a mechanism to talk about all this mathematical abstractions. My hope is to give the audience tools to answer their questions about all this concepts using the python utilities .\n",
         "\n",
         "I think the key point to understand linear regression and methods built around it, is to pause and think about difference of **populataion data set** and a given **sample data set**. Let's play around with the two concept with our data. ⏸\n",
         "\n",
@@ -392,8 +393,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Actually using ISLP codes, you can build design matrix even simpler"
+      ],
+      "metadata": {
+        "id": "vENM964aNdD3"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "X = pd.DataFrame({'intercept': np.ones(Boston.shape[0]),\n",
+        "                  'lstat': Boston['lstat']})\n",
+        "design = MS(['lstat'])\n",
+        "# HERE!!!! instead of Boston make a df of my x and y and then use design.fit_transform(df)\n",
+        "design = design.fit(Boston)\n",
+        "X = design.transform(Boston)\n",
+        "X[:4]\n"
+      ],
       "metadata": {
         "id": "FMmg9L5Scwgt"
       },
