Change the outline again

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -17,14 +17,21 @@
         "- Load data in repo\n",
         "- Introduction (Purpose + scope)\n",
         "- Body\n",
-        "  - Linear regression is solving linear equations approximately.\n",
-        "     - Matrix notation of linear regression equations.\n",
-        "     - build X matrix with loaded data\n",
-        "     - Solve \" X β = y\"\n",
+        "  - Statistic:\n",
+        "    - population vs sample\n",
+        "    - Assumptions about population: What is error term and\n",
+        "    - Assumptions about sample: But didn't we talk about assumptions about population?\n",
         "    - Why $\\widehat{\\beta}$ and not just $\\beta$\n",
-        "\n",
-        "  - How to solve uncertain set of linear equations?\n",
-        "  - The line fitting.\n",
+        "    - Visualize the assumptions: line fitting\n",
+        "  - Linear Algebra\n",
+        "     - Linear regression is solving linear equations.\n",
+        "     - Matrix notation for solving linear equations.\n",
+        "     - Design matrix for given Sample\n",
+        "     - How to deal with uncertainty: Error term again.\n",
+        "     - Find regression coefficient in term of responses and design matrix.\n",
+        "     - How does it look like. Fit the line!\n",
+        " - Probability:\n",
+        "  - how to motivate the cost function.\n",
         "  - Connection between method of least squares and the distribution of error terms.\n",
         "- Conclusion:\n",
         "- Appendix: Some linear algebra\n",
@@ -228,6 +235,15 @@
       ],
       "metadata": {
         "id": "-KOrLgcoKBXL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[](https://giphy.com/gifs/looneytunes-no-wtf-31Q8Q845bU1QSzUKcD)\n"
+      ],
+      "metadata": {
+        "id": "I3EhjrwAQn89"
       }
     },
     {
