--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -18,8 +18,8 @@
         "- Introduction (Purpose + scope)\n",
         "- Body\n",
         "  - Statistic:\n",
-        "    - population vs sample\n",
-        "    - Assumptions about population: What is error term and\n",
+        "    - Population vs sample\n",
+        "    - Assumptions about population: Error terms has a normal distribution. But what's error term?\n",
         "    - Assumptions about sample: But didn't we talk about assumptions about population?\n",
         "    - Why $\\widehat{\\beta}$ and not just $\\beta$\n",
         "    - Visualize the assumptions: line fitting\n",
@@ -31,8 +31,8 @@
         "     - Find regression coefficient in term of responses and design matrix.\n",
         "     - How does it look like. Fit the line!\n",
         " - Probability:\n",
-        "  - how to motivate the cost function.\n",
-        "  - Connection between method of least squares and the distribution of error terms.\n",
+        "    - how to motivate the cost function.\n",
+        "\n",
         "- Conclusion:\n",
         "- Appendix: Some linear algebra\n",
         "  - questions\n",
@@ -73,29 +73,10 @@
         "!git config --global user.name \"Amineh Dadsetan\""
       ],
       "metadata": {
-        "id": "19DE6S_AX97z",
-        "outputId": "1f230813-f111-4104-946d-89112017d781",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "19DE6S_AX97z"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
-            "Cloning into 'AminehTechnicalWritings'...\n",
-            "remote: Enumerating objects: 407, done.\u001b[K\n",
-            "remote: Counting objects: 100% (266/266), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (174/174), done.\u001b[K\n",
-            "remote: Total 407 (delta 169), reused 152 (delta 89), pack-reused 141\u001b[K\n",
-            "Receiving objects: 100% (407/407), 3.79 MiB | 15.11 MiB/s, done.\n",
-            "Resolving deltas: 100% (248/248), done.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -151,17 +132,13 @@
         "It is followed by the introduction of matrix notations and loss function.\n",
         " Ocasionally, at the end, there might be a word or two on how Maximum liklihood or Best Linear Unbiased Estimator  is relevent to the subject.\n",
         "\n",
-        "So you see, it starts with statistics, then turns to linear algebra and some analysis, and finally a lot of probability that sounds very uncalled for.\n",
         "\n",
-        "In this notebook, I attempt to teach the linear regression, while separating all this major ideas that pops out of  different fields of study. I also try to implement python function that serves as a mechanism to talk about all this mathematical abstractions. My hope is to give the audience tools to answer their questions about all this concepts using the python utilities .\n",
+        "So you see, it starts with statistics, then turns to linear algebra and some analysis, and finally a lot of probability that sounds very uncalled for. I found this super annoying because sometime you just wanna learn linear regression, and not statistic, linear algebra and probability (specially if it is on a weekend).\n",
         "\n",
-        "I think the key point to understand linear regression and methods built around it, is to pause and think about difference of **populataion data set** and a given **sample data set**. Let's play around with the two concept with our data. ⏸\n",
+        "In this notebook, I attempt to teach the linear regression, while separating all this major ideas that comes out of  different fields of study. Specifically, I break it down to $\\textbf{Statistical}$ concepts, $\\textbf{Linear algebraic}$ concepts and $\\textbf{Probability}$.\n",
         "\n",
-        "I have wrote some utility function that helps you build a sampler around given population.\n",
-        "Once you built a sampler from population, you can fix the set of predictors (`set_sample_xs`). Finally you can use `sample_response` to sample `y`s with replacement.\n",
-        "You can think of it as a experiment in which the predictor is age and outcome is their credit score. Before starting the experminet you know how many people and from what ages you would like to run experiment on. Just knowing the ages (predictor) is not enought since there is so many people with same age thus so many credit scores (response) that can be used as training set.  So what you need to do is to sample actual people of the given ages to study their credit scores.\n",
-        "\n",
-        "\n",
+        " I also try to implement python function that serves as a mechanism to talk about all this mathematical abstractions. My hope is to give the audience tools to answer their questions about all this concepts using the python utilities .\n",
+        " Some Important nots: I am reading standford book called [ISLP](https://www.statlearning.com/) which is great textbook. Hence I am using their terminologies. This notebook can be used by people who are reading the ISLP book to clarify any confusion.\n",
         "\n",
         "\n",
         "\n",
@@ -169,6 +146,51 @@
       ],
       "metadata": {
         "id": "-GrjszX0UXVK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Statistics\n",
+        "\n",
+        "What is statistics? That's the only way I can start a pargraph that is about statistics. The reason is that I am not really sure what statistics is. Specially I don't know what is the difference of statistics and probability theory. The good news is that I still know what is difference of statistics and linear algebra, but still it is not enough knowledge to help write a chapter about statistics.\n",
+        "\n",
+        "[Wikipedia](https://en.wikipedia.org/wiki/Statistics) says:\n",
+        "> Statistics is the discipline that concerns the collection, organization, analysis, interpretation, and presentation of data. In applying statistics to a scientific, industrial, or social problem, it is conventional to begin with a statistical population or a statistical model to be studied.\n",
+        "\n",
+        "\n",
+        "\n",
+        "As the text says,in applying statistics, it is conventional to begin with a statistical population, or model. By the way that is exactly what I wanted to hear.\n",
+        "\n",
+        "Perhaps statistics is a lot about practicality. We have a population of people. Then we wanna represent them as a set of datapoints.Each datapoint contains **predictors** or $x$'s and **responses** or $y$'s. An example of predictor can be age and example of response (or predicted) can be how much debt they have.\n",
+        "\n",
+        "The **model** concern is about how to relate y to x across all data points. Model is a mathematical formula with x and y that is not exactly a mathematical formula mainly because mathematical formulas don't have uncertainty but real world populations are.\n",
+        "\n",
+        "\\- What is **Sample**? It is a smaller subset of population? \\\\\n",
+        "\\+ Why? \\\\\n",
+        "\\- Mainly because practical concerns. Population can be as big as the population of a whole country. Whatever purpose you have, it is easier to be done on a smaller group of the population which we call sample.\n",
+        "\n",
+        "Only things you need to remember from this section is **Population**, **Sample**, **predictor**, **response**, **Population vs Sample**.  \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VZlER_fbWwCF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Population VS Sample 🆚\n",
+        "I think the key point to understand linear regression and methods built around it, is to pause and think about difference of **populataion data set** and a given **sample data set**. Let's play around with the two concept with our data. ⏸\n",
+        "\n",
+        "I have wrote some utility function that helps you build a sampler around given population.\n",
+        "Once you built a sampler from population, you can fix the set of predictors (`set_sample_xs`). Finally you can use `sample_response` to sample `y`s with replacement.\n",
+        "You can think of it as a experiment in which the predictor is age and outcome is their credit score. Before starting the experminet you know how many people and from what ages you would like to run experiment on. Just knowing the ages (predictor) is not enought since there is so many people with same age thus so many credit scores (response) that can be used as training set.  So what you need to do is to sample actual people of the given ages to study their credit scores.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "kWJbtyn0Wdjm"
       }
     },
     {
@@ -221,6 +243,10 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Assumptions about population: Error terms has a normal distribution:\n",
+        "\n",
+        " But what's error term? HERE!!!!!\n",
+        " Add utilities to create population (add features to them...)\n",
         "\n",
         "The random data from  previous notebook follows the assumption of linear regression. This assumes that if you subtract a linear combination of predictors from the response, the result will have a standard normal distribution. Hence, you can fit a linear model to a given sample.\n",
         "\n",
