--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -266,6 +266,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Linear Algebra\n",
+        "Now everything becomes linear algebra 🧙"
+      ],
+      "metadata": {
+        "id": "4D2vyjiOdfA3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "[](https://giphy.com/gifs/looneytunes-no-wtf-31Q8Q845bU1QSzUKcD)\n"
       ],
       "metadata": {
