--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -74,10 +74,10 @@
       ],
       "metadata": {
         "id": "19DE6S_AX97z",
-        "outputId": "b83eed92-8470-411e-c2c7-b77ccd6aea24",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b83eed92-8470-411e-c2c7-b77ccd6aea24"
       },
       "execution_count": 1,
       "outputs": [
@@ -283,12 +283,12 @@
         "axe.plot(np.unique(population[:,0]), np.unique(population[:,0]) * 2 + 4, color='r');\n"
       ],
       "metadata": {
-        "id": "1eL3gw9uWYc-",
-        "outputId": "20081b99-c1e0-4a7a-8144-b5a751a70220",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 452
-        }
+        },
+        "id": "1eL3gw9uWYc-",
+        "outputId": "20081b99-c1e0-4a7a-8144-b5a751a70220"
       },
       "execution_count": 19,
       "outputs": [
@@ -330,6 +330,9 @@
         "In many practical situations, the whole population is too big and mostly unknown to us. It is not possible to count every object in the population, so the computation must be performed on a sample of the population.\n",
         "\n",
         " The consequence is that we can not make direct assumption about the Sample like we do for the population. Specifically, how do we know that the sample follows the assumption of linear regression as well? What if the sample data set is a horrible representetive of population data set and not random at all?\n",
+        "\n",
+        "(Add a graph with 3 samples in it, each diffent color, one below the regression line and one above HERE!!!)\n",
+        "\n",
         "\n",
         "The way to ensure, is to sample with replacement. It means we don't sample just once, we sample a lot of times so in essence we don't have just one sample but many.  Subsequently, we can think about  [sampling distribution](https://en.wikipedia.org/wiki/Sampling_distribution) over all possible samples.\n",
         "\n",
