Sample with lowest responses

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -79,7 +79,7 @@
         },
         "outputId": "b83eed92-8470-411e-c2c7-b77ccd6aea24"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "5j4eSlknAHha"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "OSu41WDF_GAe"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "id": "C8IKsSGKKfew",
         "outputId": "2565926c-18b7-4c6b-c3dc-0b8e98d614a0"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -290,7 +290,7 @@
         "id": "1eL3gw9uWYc-",
         "outputId": "20081b99-c1e0-4a7a-8144-b5a751a70220"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -329,8 +329,10 @@
         "### Assumptions about sample: But didn't we talk about assumptions about population?\n",
         "In many practical situations, the whole population is too big and mostly unknown to us. It is not possible to count every object in the population, so the computation must be performed on a sample of the population.\n",
         "\n",
-        " The consequence is that we can not make direct assumption about the Sample like we do for the population. Specifically, how do we know that the sample follows the assumption of linear regression as well? What if the sample data set is a horrible representetive of population data set and not random at all?\n",
+        "One issue working with sample as a proxy of the population, is that we can not make direct assumption about the sample like we do for the population. Specifically, how do we know that the sample follows the assumption of linear regression as well? What if the sample data set is a horrible representetive of population data set and not random at all?\n",
         "\n",
+        "Let's pick a sample set of size 100 with lowest responses among datapoints with the same predictor.\n",
+        "How do I sample lowest responses (add a method to class?? ) HERE!!!\n",
         "(Add a graph with 3 samples in it, each diffent color, one below the regression line and one above HERE!!!)\n",
         "\n",
         "\n",
