Add git push instruction

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -77,9 +77,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b83eed92-8470-411e-c2c7-b77ccd6aea24"
+        "outputId": "92afa541-b500-4111-84be-7881e2b95329"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,15 +87,29 @@
           "text": [
             "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
             "Cloning into 'AminehTechnicalWritings'...\n",
-            "remote: Enumerating objects: 447, done.\u001b[K\n",
-            "remote: Counting objects: 100% (306/306), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (214/214), done.\u001b[K\n",
-            "remote: Total 447 (delta 199), reused 152 (delta 89), pack-reused 141\u001b[K\n",
-            "Receiving objects: 100% (447/447), 3.80 MiB | 11.06 MiB/s, done.\n",
-            "Resolving deltas: 100% (278/278), done.\n"
+            "remote: Enumerating objects: 459, done.\u001b[K\n",
+            "remote: Counting objects: 100% (318/318), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (226/226), done.\u001b[K\n",
+            "remote: Total 459 (delta 207), reused 152 (delta 89), pack-reused 141\u001b[K\n",
+            "Receiving objects: 100% (459/459), 3.85 MiB | 17.45 MiB/s, done.\n",
+            "Resolving deltas: 100% (286/286), done.\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Git Setup\n",
+        "To push to your personal repo,\n",
+        "1. go to https://github.com/settings/tokens\n",
+        "2. generate a token with all access\n",
+        "3. run `git push https://<token>@github.com/yourusername/yourrepository.git`\n",
+        "( `git push https://<token>@github.com/aminehd/AminehTechnicalWritings.git`)"
+      ],
+      "metadata": {
+        "id": "VbzqyiNiL0rr"
+      }
     },
     {
       "cell_type": "code",
@@ -111,7 +125,7 @@
       "metadata": {
         "id": "5j4eSlknAHha"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -122,12 +136,12 @@
       ],
       "metadata": {
         "id": "0W6vmWNrAOcm",
-        "outputId": "8b0cf774-775b-4e51-d312-25d8238f3c9b",
+        "outputId": "6d75f882-956f-40c9-e726-fd33b8316e94",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +238,7 @@
       "metadata": {
         "id": "OSu41WDF_GAe"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -243,9 +257,9 @@
           "height": 452
         },
         "id": "C8IKsSGKKfew",
-        "outputId": "2565926c-18b7-4c6b-c3dc-0b8e98d614a0"
+        "outputId": "59356e4d-523d-4130-cc38-6983f573f95f"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
