Add transition from intuitive desc to mathematical formulae

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -23,6 +23,8 @@
         "    - Assumptions about sample: But didn't we talk about assumptions about population?\n",
         "    - Why $\\widehat{\\beta}$ and not just $\\beta$\n",
         "    - Visualize the assumptions: line fitting\n",
+        "  - Transition from intuitive descriptions to mathematical formulation\n",
+        "    \n",
         "  - Linear Algebra\n",
         "     - Linear regression is solving linear equations.\n",
         "     - Matrix notation for solving linear equations.\n",
@@ -79,7 +81,7 @@
         },
         "outputId": "763360bc-ccf7-4c5c-8dca-68e83a6a2893"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +127,7 @@
       "metadata": {
         "id": "5j4eSlknAHha"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +143,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -238,7 +240,7 @@
       "metadata": {
         "id": "OSu41WDF_GAe"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +261,7 @@
         "id": "C8IKsSGKKfew",
         "outputId": "8c3f8efc-3e51-4439-dea0-578146932e74"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -304,7 +306,7 @@
         "id": "1eL3gw9uWYc-",
         "outputId": "b664f590-a5a4-4bab-bd18-d2e497d4e376"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -372,7 +374,7 @@
       "metadata": {
         "id": "0RDBgr3OMew4"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,7 +397,7 @@
           "height": 447
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -444,6 +446,20 @@
       ],
       "metadata": {
         "id": "d6SiaDTZMd0C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Transition from intuitive descriptions to mathematical formulation\n",
+        " What is the goal? how these assumptions can help reach it\n",
+        "The goal of this is to draw a decent line that goes through all data points. What do we mean by decent? It means that the majority of data points are close the the line.\n",
+        "HERE!!! add graph of line passing trhough dps\n",
+        "HERE!!! add some words on how to formalize this\n",
+        "HERE!!! add some words about measure on a set."
+      ],
+      "metadata": {
+        "id": "x-GC6E_JdZOB"
       }
     },
     {
