Add aimport sampling_utils

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -118,6 +118,11 @@
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2\n",
+        "# Import utility functions that provide answers to challenges\n",
+        "%load_ext autoreload\n",
+        "%aimport sampling_utils\n",
+        "\n",
+        "\n",
         "import sys\n",
         "sys.path.insert(1, '/content/AminehTechnicalWritings/src')\n",
         "import sampling_utils as su\n",
