--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -81,7 +81,7 @@
         },
         "outputId": "840541d0-123f-4e51-fc4f-fbceb4cccf83"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +138,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,7 +260,7 @@
       "metadata": {
         "id": "OSu41WDF_GAe"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +281,7 @@
         "id": "C8IKsSGKKfew",
         "outputId": "843d5e9f-9f2b-4766-e02e-d082b68cf162"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -326,7 +326,7 @@
         "id": "1eL3gw9uWYc-",
         "outputId": "3054a988-556c-44ad-b863-b1c4fcab7237"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -401,7 +401,7 @@
       "metadata": {
         "id": "0RDBgr3OMew4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -425,7 +425,7 @@
           "height": 447
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,10 +455,32 @@
         "Here!!! develop a Population class that let's add predictor, change response, partition responses based on preds...\n",
         "\n",
         "\n",
-        "With so much variability on in the sampled data, how can we transfer assumptions from population set to a randomly given sample set? (HERE!!!)\n",
+        "In the above graph, there are three sample sets: green with the highest responses, red with the lowest responses, and yellow, which is sampled with replacement. Visually, they appear different. To discuss their differences more accurately, we can also compute [sample statistics](<https://en.wikipedia.org/wiki/Statistic>) for each sample.\n",
         "\n",
+        "Sample mean is a good sample statistic we can talk about. The sample mean for green sample is --, for yellow in --- and for red is ---, while population mean is ---. You can see sample mean for green and red sample are higher and lower than sample population, respectively. Also the samle mean for the yellow one is close to the population mean.  (HERE!!! fill numbers)\n",
         "\n",
-        "\n",
+        "There are ${m \\choose 100}$ ways to pick a sample of size 100, where 'm' is the size of the population. Therefore, we get ${m \\choose 100}$ sample means for the given size. This yields a decent  number of data points. This gives us a [sampling distribution](<https://en.wikipedia.org/wiki/Sampling_distribution>) of the sample mean. Hopefully all this setup will make you feel an urge to graph the sample means:\n",
+        " HERE!!! (do the graph)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "d6SiaDTZMd0C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# HERE!!!!! graph sample means"
+      ],
+      "metadata": {
+        "id": "RaHwuFn4NLVc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "The way to ensure, is to sample with replacement. It means we don't sample just once, we sample a lot of times so in essence we don't have just one sample but many.  Subsequently, we can think about  [sampling distribution](https://en.wikipedia.org/wiki/Sampling_distribution) over all possible samples.\n",
         "\n",
         "Take any statistics (a measure on a set), such as sample mean, and think about what would be the all possible outcomes over all samplings. That would give you a distribution again. Thus you can say stuff about the variance of it (see [sample Variance ](https://en.wikipedia.org/wiki/Variance#Sample_variance). Knowing such variance you can measure how much it might deviate (see [standard error](https://en.wikipedia.org/wiki/Standard_error)).\n",
@@ -480,7 +502,7 @@
         " Add utilities to create population (add features to them...) HERE!!!!!"
       ],
       "metadata": {
-        "id": "d6SiaDTZMd0C"
+        "id": "99mxH1zQNKNG"
       }
     }
   ],
