--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -21,6 +21,7 @@
         "    - Population vs sample\n",
         "    - Assumptions about population: Error terms has a normal distribution. But what's error term?\n",
         "    - Assumptions about sample: But didn't we talk about assumptions about population?\n",
+        "    - Sample statistic and its distribution and expectation\n",
         "    - Why $\\widehat{\\beta}$ and not just $\\beta$\n",
         "    - Visualize the assumptions: line fitting\n",
         "  - Transition from intuitive descriptions to mathematical formulation\n",
@@ -81,7 +82,7 @@
         },
         "outputId": "d0a38ffa-6201-475c-d4e6-08d507fd038d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +165,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +190,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,7 +287,7 @@
       "metadata": {
         "id": "OSu41WDF_GAe"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -307,7 +308,7 @@
         "id": "C8IKsSGKKfew",
         "outputId": "a6701889-77a6-4cbe-abc8-d22255848de4"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -352,7 +353,7 @@
         "id": "1eL3gw9uWYc-",
         "outputId": "ef420c62-e530-431d-a805-c341f04ecf05"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -428,7 +429,7 @@
       "metadata": {
         "id": "0RDBgr3OMew4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -452,7 +453,7 @@
           "height": 447
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -482,16 +483,29 @@
         "Here!!! develop a Population class that let's add predictor, change response, partition responses based on preds...\n",
         "\n",
         "\n",
-        "In the above graph, there are three sample sets: green with the highest responses, red with the lowest responses, and yellow, which is sampled with replacement. Visually, they appear different. To discuss their differences more accurately, we can also compute [sample statistics](<https://en.wikipedia.org/wiki/Statistic>) for each sample.\n",
+        "In the above graph, there are three sample sets: green with the highest responses, red with the lowest responses, and yellow, which is sampled with replacement. Visually, they appear different. To discuss their differences more accurately, we can also compute [sample statistics](<https://en.wikipedia.org/wiki/Statistic>) for each sample. Let's define sample satatistic and its distribution over multiple sample of same population\n",
         "\n",
-        "We can talk about sample mean as an example of sample statistic. The sample mean for green sample is --, for yellow in --- and for red is ---, while population mean is ---. You can see sample mean for green and red sample are higher and lower than sample population, respectively. Also the samle mean for the yellow one is close to the population mean.  (HERE!!! fill numbers)\n",
         "\n",
-        "There are ${m \\choose 100}$ ways to pick a sample of size 100, where 'm' is the size of the population. Therefore, we get ${m \\choose 100}$ sample means for the given size. This yields a decent  number of data points. This gives us a [sampling distribution](<https://en.wikipedia.org/wiki/Sampling_distribution>) of the sample mean. Hopefully all this setup will make you feel an urge to graph the sample means:\n",
-        " HERE!!! (do the graph)\n",
         "\n"
       ],
       "metadata": {
         "id": "d6SiaDTZMd0C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Sample statistic and its distribution and expectation\n",
+        "\n",
+        "Sample is a subset of a population. So any [mathematical measure](https://en.wikipedia.org/wiki/Measure_(mathematics))  can be defnied as a sample stat. HERE!!! continiue by talking about sample mean as example  \n",
+        "\n",
+        "We can talk about sample mean as an example of sample statistic. The sample mean for green sample is --, for yellow in --- and for red is ---, while population mean is ---. You can see sample mean for green and red sample are higher and lower than sample population, respectively. Also the samle mean for the yellow one is close to the population mean.  (HERE!!! fill numbers)\n",
+        "\n",
+        "There are ${m \\choose 100}$ ways to pick a sample of size 100, where 'm' is the size of the population. Therefore, we get ${m \\choose 100}$ sample means for the given size. This yields a decent  number of data points. This gives us a [sampling distribution](<https://en.wikipedia.org/wiki/Sampling_distribution>) of the sample mean. Hopefully all this setup will make you feel an urge to graph the sample means:\n",
+        " HERE!!! (do the graph)"
+      ],
+      "metadata": {
+        "id": "3vEEHPye7BJi"
       }
     },
     {
@@ -517,7 +531,7 @@
           "height": 485
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
